--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -6,7 +6,9 @@ body {
     main {
         min-height: 80vh;
     }
-
+    .row{
+        margin: 0;
+    }
     .home-content {
         min-height: 600px !important;
         height: 80vh;
@@ -66,8 +68,6 @@ body {
             display: flex;
             align-items: center;
             text-align: left;
-            transition: all 0.3s ease-in-out;
-
             svg {
                 width: 25px;
                 height: 25px;
@@ -78,6 +78,7 @@ body {
             &:hover {
                 width: 100%;
                 background: linear-gradient(to right top, rgba(2, 208, 245, 0.5), rgba(3, 230, 154, 0.3));
+                transition: all 1s ease-in-out;
             }
         }
 
