--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,6 +3,8 @@ $body-bg: #f8fafc;
 
 // Typography
 $font-family-sans-serif: font-family loos-normal,sans-serif;
+$dashboard-p: cairo, sans-serif;
+$dashboard-h: proxima-nova,sans-serif;
 $line-height-base: 1.6;
 
 // Colors
