--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 @import 'base';
 @import 'typography';
 @import 'transitions';
+@import 'searchbar';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
