--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: font-family loos-normal,sans-serif;
+$font-family-sans-serif: cairo, sans-serif;
 $dashboard-p: cairo, sans-serif;
 $dashboard-h: proxima-nova,sans-serif;
 $line-height-base: 1.6;
