--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 @import 'typography';
 @import 'transitions';
 @import 'searchbar';
+@import 'customCheckbox';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
