--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -5,9 +5,10 @@ h5, h4{
     font-style: normal;
 }
 
-.dashboard p{
+p, input{
     font-family: $dashboard-p;
     font-weight: 400;
     font-style: normal;
     font-size: 14px;
 }
+
