--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,7 @@
 @import 'transitions';
 @import 'searchbar';
 @import 'customCheckbox';
-
+@import 'projecttask';
+@import 'login';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
