--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -5,10 +5,15 @@ h5, h4{
     font-style: normal;
 }
 
-p, input{
+p, input, a{
     font-family: $dashboard-p;
     font-weight: 400;
     font-style: normal;
     font-size: 15px;
 }
 
+a{
+    list-style: none;
+    text-decoration: none !important;
+    color: inherit;
+}
