--- a/resources/sass/_projecttask.scss
+++ b/resources/sass/_projecttask.scss
@@ -5,3 +5,9 @@
     border-radius: 10px;
 }
 
+.create-modal{
+    cursor: pointer;
+    padding: 10px;
+    background: linear-gradient(to right bottom, rgba(235,250,250, 0.3), rgba(255, 255, 255, 0.8));
+    border-radius: 10px;
+}
