--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -34,7 +34,7 @@ body {
     }
 
     .glass {
-        background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3)) !important;
+        background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
         backdrop-filter: blur(5px);
     }
 
