--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -1,12 +1,12 @@
 h5, h4{
     font-size: 20px !important;
-    font-family: $dashboard-h;
+    font-family: $font-family-sans-serif;
     font-weight: 500;
     font-style: normal;
 }
 
 p, input, a{
-    font-family: $dashboard-p;
+    font-family: $font-family-sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 15px;
