--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,10 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "base";
+@import "searchbar";
+@import "typography";
+@import "transitions";
+@import "projecttask";
+@import "login";
+@import "customCheckbox";
