Replacing blade views with vue.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,6 @@
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 } */
-
 body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
@@ -12,51 +11,39 @@ body {
           animation: gradient 15s ease infinite;
   overflow: hidden !important;
 }
-
 @-webkit-keyframes gradient {
   0% {
     background-position: 10% 50%;
   }
-
   50% {
     background-position: 100% 50%;
   }
-
   100% {
-    background-position: 10% 50%;
+    background-position: 50% 50%;
   }
 }
-
 @keyframes gradient {
   0% {
     background-position: 10% 50%;
   }
-
   50% {
     background-position: 100% 50%;
   }
-
   100% {
-    background-position: 10% 50%;
+    background-position: 50% 50%;
   }
 }
-
 body .row {
   margin: 0;
 }
-
 body .home-content {
-  height: 85vh;
-  width: 100% !important;
-  border-radius: 10px;
+  height: 100vh;
 }
-
 body .glass {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
 }
-
 body .circle {
   position: absolute;
   background: linear-gradient(to right bottom, #00fff2, #0144);
@@ -66,39 +53,28 @@ body .circle {
   width: 15rem;
   height: 15rem;
 }
-
 body .circle:hover {
   transform: scale(0.5);
 }
-
 body .circle1 {
   bottom: 0;
   position: absolute;
   left: 3%;
   overflow: hidden;
 }
-
 body .circle2 {
   top: 0%;
   right: 4%;
   overflow: hidden;
 }
-
 body .dashboard {
-  background: linear-gradient(40deg, rgba(255, 235, 215, 0), rgba(255, 255, 255, 0.3));
+  background: linear-gradient(40deg, rgba(255, 235, 215, 0), rgba(255, 255, 255, 0.7));
   border-radius: 1rem 0 0 1rem;
-  position: relative;
-  min-height: 80vh;
-  height: 100% !important;
-  width: 17%;
-  min-width: 220px;
 }
-
 body .dashboard .user {
   border-radius: 10px 0 0 0rem;
   background: linear-gradient(to right bottom, rgba(2, 208, 245, 0.5), rgba(3, 230, 154, 0.3));
 }
-
 body .dashboard .item {
   padding: 10px 0px 10px 25px;
   width: 100% !important;
@@ -107,20 +83,17 @@ body .dashboard .item {
   align-items: center;
   text-align: left;
 }
-
 body .dashboard .item svg {
   width: 25px;
   height: 25px;
   justify-self: left;
   margin-right: 25px;
 }
-
 body .dashboard .item:hover {
   width: 100%;
   background: linear-gradient(to right top, rgba(2, 208, 245, 0.5), rgba(3, 230, 154, 0.3));
   transition: all 1s ease-in-out;
 }
-
 body .dashboard .promo {
   background: linear-gradient(to right top, rgba(2, 208, 245, 0.3), rgba(3, 230, 154, 0.5));
   width: 10rem;
@@ -133,13 +106,11 @@ body .dashboard .promo {
   align-items: center;
   justify-content: center;
 }
-
 body .dashboard .active {
   border-left: 4px solid white;
   -webkit-backdrop-filter: opacity(0.5);
           backdrop-filter: opacity(0.5);
 }
-
 body hr {
   border: none;
   border-top: 3px double #333;
@@ -148,7 +119,6 @@ body hr {
   text-align: center;
   height: 5px;
 }
-
 body .profile-image-container {
   width: 80px;
   height: 80px;
@@ -160,7 +130,6 @@ body .profile-image-container {
 .card-container {
   width: 100%;
 }
-
 .card-container svg {
   width: 15px;
   height: 15px;
@@ -197,9 +166,12 @@ button {
   height: 50px;
   margin: 0;
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3)) !important;
-  border-radius: 0px 10px 0 0;
 }
 
+.search-container svg {
+  display: inline-block;
+  width: 100%;
+}
 .search-container textarea,
 .search-container input {
   outline: none;
@@ -271,7 +243,6 @@ a {
 .form-custom {
   padding: 50px;
 }
-
 .form-custom .row > * {
   padding: 0 !important;
 }
@@ -282,7 +253,6 @@ a {
   width: inherit;
   padding: 0 !important;
 }
-
 .login-container textarea,
 .login-container input[type=text], .login-container input[type=email], .login-container input[type=phone], .login-container input[type=password] {
   outline: none;
@@ -296,7 +266,6 @@ a {
   background: inherit;
   text-overflow: ellipsis;
 }
-
 .login-container .invalid-feedback {
   position: absolute;
 }
@@ -310,7 +279,6 @@ a {
   cursor: pointer;
   width: 5px;
 }
-
 .cbx span {
   width: 25px;
   height: 25px;
@@ -420,7 +388,7 @@ a {
     transform: scale(1.2);
   }
 }
-/*! tailwindcss v2.2.15 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v2.2.19 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
