--- a/resources/sass/_searchbar.scss
+++ b/resources/sass/_searchbar.scss
@@ -3,11 +3,14 @@
     height: 50px;
     margin: 0;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3)) !important;
-    border-radius: 0px 10px 0 0;
+    //border-radius: 10px 10px 0 0;
 }
 
 .search-container {
-
+    svg {
+        display: inline-block;
+        width: 100%;
+    }
     textarea,
     input {
         outline: none;
