Replacing blade views with vue.

--- a/resources/sass/_transitions.scss
+++ b/resources/sass/_transitions.scss
@@ -10,3 +10,11 @@
 .ease-in-1s{
     transition: all 1s ease-in-out;
 }
+
+.ease-in-50{
+    transition: all 500ms ease-in-out;
+}
+
+.ease-in-30{
+    transition: all 300ms ease-in-out;
+}
