--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -7,7 +7,7 @@
 body {
    // min-height: 100vh;
    // background: linear-gradient(-45deg, #00a799, #9f00e90e, #23a6d5);
-   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+   background: linear-gradient(-45deg, #23a6d5, #23d5ab);
    background-size: 400% 400%;
     //background: linear-gradient(-45deg, #c065cc, #00e73a, #23a6d5, #fc9700);
     font-family: $font-family-sans-serif;
@@ -15,13 +15,13 @@ body {
     overflow: hidden !important;
     @keyframes gradient {
         0% {
-            background-position: 10% 50%;
+            background-position: 0% 50%;
         }
         50% {
             background-position: 100% 50%;
         }
         100% {
-            background-position: 50% 50%;
+            background-position: 0% 50%;
         }
     }
     .row{
@@ -66,10 +66,8 @@ body {
 
     .dashboard {
         background: linear-gradient( 40deg, rgba(255, 235, 215, 0), rgba(255, 255, 255, 0.7));
-        border-radius: 1rem 0 0 1rem;
 
         .user {
-            border-radius: 10px 0 0 0rem;
             background: linear-gradient(to right bottom, rgba(2, 208, 245, 0.5), rgba(3, 230, 154, 0.3));
         }
 
@@ -77,9 +75,7 @@ body {
             padding: 10px 0px 10px 25px;
             width: 100% !important;
             height: auto;
-            display: flex;
             align-items: center;
-            text-align: left;
             svg {
                 width: 25px;
                 height: 25px;
