--- a/public/css/app.css
+++ b/public/css/app.css
@@ -692,14 +692,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 0px;
 }.right-0 {
   right: 0px;
-}.bottom-0 {
-  bottom: 0px;
-}.left-0 {
-  left: 0px;
 }.top-1\/2 {
   top: 50%;
 }.left-1\/2 {
   left: 50%;
+}.bottom-0 {
+  bottom: 0px;
+}.left-0 {
+  left: 0px;
 }.z-10 {
   z-index: 10;
 }.z-50 {
@@ -710,10 +710,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin: 0.75rem;
 }.m-2 {
   margin: 0.5rem;
-}.m-0 {
-  margin: 0px;
 }.m-1 {
   margin: 0.25rem;
+}.m-0 {
+  margin: 0px;
 }.mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -753,10 +753,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.75rem;
 }.mb-4 {
   margin-bottom: 1rem;
-}.mr-3 {
-  margin-right: 0.75rem;
 }.mr-5 {
   margin-right: 1.25rem;
+}.mr-3 {
+  margin-right: 0.75rem;
+}.mt-12 {
+  margin-top: 3rem;
+}.mb-12 {
+  margin-bottom: 3rem;
+}.mb-5 {
+  margin-bottom: 1.25rem;
+}.mb-8 {
+  margin-bottom: 2rem;
 }.block {
   display: block;
 }.inline-block {
@@ -779,16 +787,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 4rem;
 }.h-2 {
   height: 0.5rem;
-}.h-12 {
-  height: 3rem;
-}.h-6 {
-  height: 1.5rem;
-}.h-\[40px\] {
-  height: 40px;
-}.h-\[60px\] {
-  height: 60px;
 }.h-\[50px\] {
   height: 50px;
+}.h-6 {
+  height: 1.5rem;
 }.min-h-screen {
   min-height: 100vh;
 }.w-5 {
@@ -807,35 +809,58 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 16.666667%;
 }.w-1\/2 {
   width: 50%;
+}.w-\[50px\] {
+  width: 50px;
 }.w-full {
   width: 100%;
 }.w-6 {
   width: 1.5rem;
 }.w-48 {
   width: 12rem;
-}.w-\[40px\] {
-  width: 40px;
-}.w-\[60px\] {
-  width: 60px;
-}.w-\[50px\] {
-  width: 50px;
 }.max-w-xl {
   max-width: 36rem;
 }.max-w-6xl {
   max-width: 72rem;
 }.flex-initial {
   flex: 0 1 auto;
+}.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-x-full {
   --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-x-0 {
   --tw-translate-x: -0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
+}.translate-x-0\.5 {
+  --tw-translate-x: 0.125rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
+}.translate-x-0 {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.translate-x-1\/2 {
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.translate-x-\[25\%\] {
+  --tw-translate-x: 25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.translate-x-\[10\%\] {
+  --tw-translate-x: 10%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.translate-x-\[5\%\] {
+  --tw-translate-x: 5%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.translate-x-\[2\%\] {
+  --tw-translate-x: 2%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.translate-x-full {
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.translate-x-\[15\%\] {
+  --tw-translate-x: 15%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -868,6 +893,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: space-between;
 }.justify-evenly {
   justify-content: space-evenly;
+}.justify-self-start {
+  justify-self: start;
 }.justify-self-end {
   justify-self: end;
 }.overflow-hidden {
@@ -1024,8 +1051,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 2.25rem;
 }.pr-9 {
   padding-right: 2.25rem;
-}.pl-7 {
-  padding-left: 1.75rem;
 }.pt-2 {
   padding-top: 0.5rem;
 }.text-left {
@@ -1036,8 +1061,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   text-align: right;
 }.align-baseline {
   vertical-align: baseline;
-}.align-middle {
-  vertical-align: middle;
 }.font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }.text-sm {
@@ -1055,10 +1078,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}.text-\[40px\] {
+  font-size: 40px;
+}.text-\[30px\] {
+  font-size: 30px;
+}.text-\[36px\] {
+  font-size: 36px;
+}.text-\[24px\] {
+  font-size: 24px;
 }.font-semibold {
   font-weight: 600;
 }.font-bold {
   font-weight: 700;
+}.font-medium {
+  font-weight: 500;
 }.uppercase {
   text-transform: uppercase;
 }.leading-7 {
@@ -1112,12 +1145,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}.opacity-25 {
-  opacity: 0.25;
 }.opacity-0 {
   opacity: 0;
 }.opacity-100 {
   opacity: 1;
+}.opacity-25 {
+  opacity: 0.25;
 }.shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1147,6 +1180,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }.duration-150 {
